--- a/SUS/SUS/Apps/MyFirsMvcApp/Views/Cards/All.html
+++ b/SUS/SUS/Apps/MyFirsMvcApp/Views/Cards/All.html
@@ -1,5 +1,4 @@
-﻿
-<h1 class="text-center mt-2">All Cards</h1>
+﻿<h1 class="text-center mt-2">All Cards</h1>
 <div class="row mt-2 mb-4">
     @foreach (var card in Model)
     {
