--- a/SUS/SUS/Apps/MyFirsMvcApp/Views/Shared/_Layout.cshtml
+++ b/SUS/SUS/Apps/MyFirsMvcApp/Views/Shared/_Layout.cshtml
@@ -1,52 +1,67 @@
-﻿<!DOCTYPE html>
+﻿<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title>SULS Platform</title>
-    <link rel="stylesheet" href="/css/reset-css.css" />
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <meta charset="utf-8">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
+
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/custom.css">
+
+    <title>Battle Cards</title>
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="/">SULS</a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-           
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link active" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Problems/Create">Create Problem</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Cards/Collection">My Collection</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Cards/Add">Add Card</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Users/Logout">Logout</a>
-                </li>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Users/Login">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Users/Register">Register</a>
-                </li>
-            </ul>
-          
-        </div>
-    </nav>
-    <div class="top-border-line primary-separator"></div>
-    <div class="container-fluid">
+<body class="container">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+            <a class="nav-link text-white active h5" href="/">Battle Cards</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="text-white">MENU</span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link text-white active h5" href="/">Home</a>
+                    </li>
+                    @if (User != null)
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link text-white active h5" href="/Cards/Collection">My Collection</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white active h5" href="/Cards/Add">Add Card</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-danger active h5" href="/Users/Logout">Logout</a>
+                        </li>
+                    }
+                    @else
+                    {
+                    <li class="nav-item">
+                        <a class="nav-link text-white active h5" href="/Users/Login">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white active h5" href="/Users/Register">Register</a>
+                    </li>
+                    }
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <main>
         @RenderBody()
-    </div>
-    <div class="bottom-border-line primary-separator"></div>
-    <div class="container">
-        <footer>
-            <p><strong>CopyRight© MD Design Studios. All rights reserved</strong></p>
-        </footer>
-    </div>
+    </main>
+
+    <footer class="bg-dark">
+        <div class="container-fluid text-center">
+            <small class="footer-background text-white">
+                CopyRight &copy; Battle Cards. All rights reserved.
+            </small>
+        </div>
+    </footer>
+
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/custom.js"></script>
 </body>
 </html>
