--- a/SUS/SUS/Apps/MyFirsMvcApp/Views/Cards/Collection.cshtml
+++ b/SUS/SUS/Apps/MyFirsMvcApp/Views/Cards/Collection.cshtml
@@ -1,7 +1,6 @@
-﻿
-<h1 class="text-center mt-2">My Collection</h1>
+﻿<h1 class="text-center mt-2">My Collection</h1>
 <div class="row mt-2 mb-4">
-    @foreach (BattleCards.ViewModels.Cards.CardViewModel card in Model)
+    @foreach (var card in Model)
     {
     <div class="card col-6 col-lg-3 game-card">
         <img src="@card.ImageUrl"
