--- a/SUS/SUS/Apps/Suls/Views/Home/IndexLoggedIn.cshtml
+++ b/SUS/SUS/Apps/Suls/Views/Home/IndexLoggedIn.cshtml
@@ -1,5 +1,4 @@
-﻿
-<main class="mt-3">
+﻿<main class="mt-3">
     <h1 class="text-center suls-text-color">All Problems</h1>
     <div class="container-fluid ml-5">
         <table class="table table-hover">
@@ -11,21 +10,24 @@
                     <th scope="col" class="col-lg-3 suls-text-color">Details</th>
                 </tr>
             </thead>
+            @foreach (var problem in Model)
+            {
+                <tr class="row">
+                    <td class="col-lg-3 suls-text-color">@problem.Name</td>
+                    <td class="col-lg-3 suls-text-color">@problem.Count</td>
+                    <td class="col-lg-3 suls-text-color">
+                        <div class="button-holder">
+                            <a href="/Submissions/Create?id=@problem.Id" class="btn btn-warning">Submit</a>
+                        </div>
+                    </td>
+                    <td class="col-lg-3">
+                        <div class="button-holder">
+                            <a href="/Problems/Details?id=@problem.Id" class="btn btn-warning">Details</a>
+                        </div>
+                    </td>
+                </tr>
+            }
             <tbody>
-                    <tr class="row">
-                        <td class="col-lg-3 suls-text-color">@problem.Name</td>
-                        <td class="col-lg-3 suls-text-color">@problem.Count</td>
-                        <td class="col-lg-3 suls-text-color">
-                            <div class="button-holder">
-                                <a href="/Submissions/Create?id=@problem.Id" class="btn btn-warning">Submit</a>
-                            </div>
-                        </td>
-                        <td class="col-lg-3">
-                            <div class="button-holder">
-                                <a href="/Problems/Details?id=@problem.Id" class="btn btn-warning">Details</a>
-                            </div>
-                        </td>
-                    </tr>
             </tbody>
         </table>
     </div>
