--- a/VisitACity/Web/VisitACity.Web/Views/Shared/_Layout.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
         </main>
     </div>
     
-    <footer class="border-top footer text-muted">
+    <footer class="border-primary footer text-muted">
         <div class="container">
             &copy; @DateTime.Now.Year - @GlobalConstants.SystemName - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
