--- a/VisitACity/Web/VisitACity.Web/Views/Home/Index.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Home/Index.cshtml
@@ -8,6 +8,9 @@
 <form>
     <div class="text-center">
     <h1 class="display-4">Welcome to @GlobalConstants.SystemName!</h1>
+    <h2>Create Your Personal Travel Guide 
+        <a href="\Plans\Create">Here</a>
+    </h2>
     <h3 style="margin-top:50px"; class="display-12">Where are you travelling to?</h3>
    <div class="container">
    <div class="input-group" style="margin-top:50px">
@@ -18,13 +21,13 @@
 </div>
 </div>
 <div class="form-check">
-  <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+  <input class="form-check-input" type="radio" name="attractionsOption" id="attractionsOption" value="attractionsOption" checked>
   <label class="form-check-label" for="exampleRadios1">
     Attractions
   </label>
 </div>
 <div class="form-check">
-  <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+  <input class="form-check-input" type="radio" name="RestaurantsOption" id="RestaurantsOption" value="RestaurantsOption">
   <label class="form-check-label" for="exampleRadios2">
     Restaurants
   </label>
