--- a/VisitACity/Web/VisitACity.Web/Views/Plans/Create.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Plans/Create.cshtml
@@ -8,6 +8,14 @@
     <h2>Where are you travelling to?</h2>
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
+        <label asp-for="Country"></label>
+        @* <select asp-for="CountryId" class="form-control" asp-items="countryItems"></select>*@
+        <input asp-for="Country" class="form-control" placeholder="Country"/>
+        <span asp-validation-for="Country" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="City"></label>
+        @* <select asp-for="CityId" class="form-control" asp-items="cityItems"></select>*@
         <input asp-for="City" class="form-control" placeholder="City"/>
         <span asp-validation-for="City" class="text-danger"></span>
     </div>
