--- a/VisitACity/Web/VisitACity.Web/Views/Home/Index.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Home/Index.cshtml
@@ -14,21 +14,21 @@
     <h3 style="margin-top:50px"; class="display-12">Where are you travelling to?</h3>
    <div class="container">
    <div class="input-group" style="margin-top:50px">
-        <input type="text" class="form-control py-2" value="" placeholder="City" />
+        <input type="text" class="form-control py-2" value="" placeholder="City in Bulgaria" />
       <button class="btn btn-outline-primary border-right-0 border" 
          type="button">Search</button>
     </div>
 </div>
 </div>
 <div class="form-check">
-  <input class="form-check-input" type="radio" name="attractionsOption" id="attractionsOption" value="attractionsOption" checked>
-  <label class="form-check-label" for="exampleRadios1">
+  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+  <label class="form-check-label" for="flexRadioDefault1">
     Attractions
   </label>
 </div>
 <div class="form-check">
-  <input class="form-check-input" type="radio" name="RestaurantsOption" id="RestaurantsOption" value="RestaurantsOption">
-  <label class="form-check-label" for="exampleRadios2">
+  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+  <label class="form-check-label" for="flexRadioDefault2">
     Restaurants
   </label>
 </div>
