--- a/VisitACity/Web/VisitACity.Web/Views/Plans/MyPlans.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Plans/MyPlans.cshtml
@@ -2,14 +2,31 @@
 @{
     this.ViewData["Title"] = "My plans";
 }
-
 @if (Model.Plans.Count() == 0)
 {
-     <div class="text-center">You have no plans yet. Create your first plan 
-         <a href="\Plans\Create">Here</a>
-     </div>
+    <partial name="_NoPlans"/>;
 }
-@foreach (var item in Model.Plans)
-{
-    <div class="text-center">@item.City</div>
-}
+ <div class="container">
+  <div class="row">
+    <div class="col-12">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">City</th>
+            <th scope="col">Country</th>
+            <th scope="col">From</th>
+            <th scope="col">To</th>
+            <th scope="col">Days</th>
+            <th scope="col">Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.Plans)
+            {
+                <partial name="_PlanPartial", model="item"/>;
+            }   
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
