using tag helpers

--- a/VisitACity/Web/VisitACity.Web/Views/Home/Index.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
     <div class="text-center">
     <h1 class="display-4">Welcome to @GlobalConstants.SystemName!</h1>
     <h2>Create Your Personal Travel Guide 
-        <a href="\Plans\Create">Here</a>
+        <a asp-controller="Plans" asp-action="Create">Here</a>
     </h2>
     <h3 style="margin-top:50px"; class="display-12">Where are you travelling to?</h3>
    <div class="container">
