--- a/VisitACity/Web/VisitACity.Web/Views/Plans/MyPlans.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Plans/MyPlans.cshtml
@@ -4,9 +4,12 @@
 }
 @if (Model.Plans.Count() == 0)
 {
-    <partial name="_NoPlans"/>;
+    <partial name="_NoPlans"/>
+    ;
 }
- <div class="container">
+else
+{
+    <div class="container">
   <div class="row">
     <div class="col-12">
       <table class="table">
@@ -30,3 +33,5 @@
     </div>
   </div>
 </div>
+}
+
