--- a/VisitACity/Web/VisitACity.Web/Views/Plans/_NoPlans.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Plans/_NoPlans.cshtml
@@ -3,5 +3,5 @@
 }
 
 <div class="text-center">You have no plans yet. Create your first plan 
-       <a href="\Plans\Create">Here</a>
+       <a asp-controller="Plans" asp-action="Create">Here</a>
 </div>
