--- a/VisitACity/Web/VisitACity.Web/Views/Shared/_AttractionCard.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Shared/_AttractionCard.cshtml
@@ -1,4 +1,5 @@
-﻿@model VisitACity.Web.ViewModels.Home.AttractionViewModel  
+﻿@using VisitACity.Web.ViewModels.Attractions
+@model AttractionViewModel  
  <div class="media col-md-4">
     <img class="card-img-top" src="@Model.ImageUrl" alt="Card image cap">
     <div class="card-body">
