--- a/VisitACity/Web/VisitACity.Web/Views/Home/Index.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
     <h3 style="margin-top:50px"; class="display-12">Where are you travelling to?</h3>
    <div class="container">
    <div class="input-group" style="margin-top:50px">
-        <input type="text" class="form-control py-2" value="" placeholder="City in Bulgaria" />
+        <input type="text" class="form-control py-2" name="cityName" placeholder="City in Bulgaria" />
       <button class="btn btn-outline-primary border-right-0 border" 
          type="button">Search</button>
     </div>
