--- a/VisitACity/Web/VisitACity.Web/Views/Shared/_Layout.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Shared/_Layout.cshtml
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@this.ViewData["Title"] - @GlobalConstants.SystemName</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/lib/fontawesome/css/all.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/site.css asp-append-version="true" />
     <link rel="stylesheet" href="~/css/themeCss.css" asp-append-version="true" />
     <script src="~/js/script.js"></script>
 </head>
