--- a/VisitACity/Web/VisitACity.Web/Views/Home/Index.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Home/Index.cshtml
@@ -33,21 +33,27 @@
   </label>
 </div>
 </form>
-
+<hr></hr>
 <div class="h-10 d-inline-block, container" style="position:absolute; background-color: whitesmoke">
-  <div class="row">
+  <div class="row align-items-center">
     <div class="col-sm">
-    @Model.CitiesCount Cities
+             <div class="feature-icon">
+              <i class="fa fa-city"></i> <span>@Model.CitiesCount Cities</span>
+         </div>
     </div>
     <div class="col-sm">
-      @Model.AttractionsCount Attractions
+         <div class="feature-icon">
+              <i class="fa fa-eye"></i> <span>@Model.AttractionsCount Attractions</span>
+         </div>
     </div>
     <div class="col-sm">
-      @Model.RestaurantCount Restaurants
+         <div class="feature-icon">
+              <i class="fa fa-utensils"></i> <span>@Model.RestaurantCount Restaurants</span>
+         </div>
     </div>
   </div>
 </div>
-
+<br></br>
 <p></p>
 <br/>
   <div class="card-group m">
