start rating implementation

--- a/VisitACity/Web/VisitACity.Web/Views/Attractions/Details.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Attractions/Details.cshtml
@@ -22,7 +22,7 @@
                             <p>@Model.Description</p>
                             <p>Price: $@Model.Price</p>
                              <div class="card-text feature-icon">
-                             <i class="fa fa-star"></i> Raiting: @Model.ReviewsCount
+                             <i class="fa fa-star"></i> Raiting: @Model.Rating
                             </div>
                             <p></p>
                          <a class="btn btn-success" asp-controller="Plans" asp-action="ById">
