--- a/VisitACity/Web/VisitACity.Web/Views/Attractions/_AttractionCard.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Attractions/_AttractionCard.cshtml
@@ -27,7 +27,7 @@
             </div>
          </a>   
     <div class="card-footer">
-        <small class="text-muted bottom-0">Raiting: @Model.ReviewsCount</small>
+        <small class="text-muted bottom-0">Raiting: @Model.Rating</small>
     </div>
     <p></p>
   </div>
