with comments beginning

--- a/VisitACity/Web/VisitACity.Web/Views/Attractions/_AttractionCard.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Attractions/_AttractionCard.cshtml
@@ -21,7 +21,7 @@
               <i class="fa fa-info-circle"></i> <span>Details</span>
             </div>
          </a>
-         <a class="btn btn-success" asp-controller="Plans" asp-action="ById">
+         <a class="btn btn-success" asp-controller="Plans" asp-action="AddAttractionToPlan">
                       <div class="feature-icon">
               <i class="fa fa-bus"></i> <span>Add to plan</span>
             </div>
