--- a/VisitACity/Web/VisitACity.Web/Views/Attractions/Details.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Attractions/Details.cshtml
@@ -25,13 +25,33 @@
                              <i class="fa fa-star"></i> Raiting: @Model.Rating
                             </div>
                             <p></p>
-                         <a class="btn btn-success" asp-controller="Plans" asp-action="ById">
+                         <a class="btn btn-success" asp-controller="Plans" asp-action="AddAttractionToPlan">
                             <div class="feature-icon">
-                             <i class="fa fa-bus"></i> <span>Add to plan</span>
+                                <i class="fa fa-bus"></i> <span>Add to plan</span>
                             </div>
                          </a>   
+                        <a class="btn btn-warning" asp-controller="Reviews" asp-action="Create" asp-route-id="@Model.Id">
+                            <div class="feature-icon">
+                                <i class="fa fa-comment"></i> <span>Comment</span>
+                            </div>
+                         </a>  
                         </div>
-
+                        <h2 class="text-center">Comments:</h2>
+                        @if (Model.Reviews.Count() == 0)
+                        {
+                            <div class="text-center">No comments yet. Be the first to comment this attraction 
+                                <a asp-controller="Reviews" asp-action="Create" asp-route-id="@Model.Id">Here</a>                               
+                            </div>
+                            <br></br>
+                        }
+                        else
+                        {
+                            @foreach (var review in Model.Reviews)
+                                {
+                                     <partial name="~/Views/Reviews/_PartialReview.cshtml", model = "review" />
+                                }
+                        }
+                        
                     </div>
                 </div>
             </div>
