--- a/VisitACity/Web/VisitACity.Web/Views/Attractions/Details.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Attractions/Details.cshtml
@@ -22,9 +22,16 @@
                             <p>@Model.Description</p>
                             <p>Price: $@Model.Price</p>
                              <div class="card-text feature-icon">
-                             <i class="fa fa-star"></i> Raiting: @Model.Rating
-                            </div>
-                            <p></p>
+                                              @for (int i = 0; i < @Model.Rating; i++)
+                        {
+
+                        <i class="fa fa-star"></i>
+                        
+
+                    }
+                             
+                           @Model.Rating.ToString("f1")</span> </div>
+                           <p></p>
                          <a class="btn btn-success" asp-controller="Plans" asp-action="AddAttractionToPlan">
                             <div class="feature-icon">
                                 <i class="fa fa-bus"></i> <span>Add to plan</span>
