--- a/VisitACity/Web/VisitACity.Web/Views/Reviews/Create.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Reviews/Create.cshtml
@@ -8,7 +8,15 @@
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
         <label asp-for="Rating"></label>
-        <input asp-for="Rating" class="form-control"></input>
+         <div class="rating"> 
+                              <input type="radio" name="rating" value="5" id="5"><label for="5">☆</label>
+                              <input type="radio" name="rating" value="4" id="4"><label for="4">☆</label> 
+                              <input type="radio" name="rating" value="3" id="3"><label for="3">☆</label>
+                              <input type="radio" name="rating" value="2" id="2"><label for="2">☆</label>
+                              <input type="radio" name="rating" value="1" id="1"><label for="1">☆</label>
+          </div>
+                          
+        <input type="hidden" asp-for="Rating" class="form-control"></input>
         <span asp-validation-for="Rating" class="text-danger"></span>
     </div>
     <div class="form-group">
