--- a/VisitACity/Web/VisitACity.Web/Views/Shared/_Layout.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="~/lib/fontawesome/css/all.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/themeCss.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/rating.css" asp-append-version="true" />
     <script src="~/js/script.js"></script>
 </head>
 <body>
