--- a/VisitACity/Web/VisitACity.Web/Views/Attractions/Details.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Attractions/Details.cshtml
@@ -21,16 +21,14 @@
                             <p></p>
                             <p>@Model.Description</p>
                             <p>Price: $@Model.Price</p>
-                             <div class="card-text feature-icon">
-                                              @for (int i = 0; i < @Model.Rating; i++)
-                        {
-
-                        <i class="fa fa-star"></i>
-                        
-
-                    }
+                            <div class="card-text feature-icon">
+                                      @for (int i = 0; i < @Model.Rating; i++)
+                                        {
+                                         <i class="fa fa-star"></i>
+                                        }
                              
-                           @Model.Rating.ToString("f1")</span> </div>
+                              <span>@Model.Rating.ToString("f1")</span> 
+                            </div>
                            <p></p>
                          <a class="btn btn-success" asp-controller="Plans" asp-action="AddAttractionToPlan">
                             <div class="feature-icon">
@@ -53,7 +51,7 @@
                         }
                         else
                         {
-                            @foreach (var review in Model.Reviews)
+                            @foreach (var review in Model.Reviews.OrderByDescending(x=> x.CreatedOn))
                                 {
                                      <partial name="~/Views/Reviews/_PartialReview.cshtml", model = "review" />
                                 }
