--- a/VisitACity/Web/VisitACity.Web/wwwroot/css/rating.css
+++ b/VisitACity/Web/VisitACity.Web/wwwroot/css/rating.css
@@ -5,3 +5,34 @@
     margin-left: -4px;
     float: left;
 }
+
+.rating > input {
+        display: none
+    }
+
+    .rating > label {
+        position: relative;
+        width: 19px;
+        font-size: 25px;
+        color: orange;
+        cursor: pointer;
+    }
+
+        .rating > label::before {
+            content: "\2605";
+            position: absolute;
+            opacity: 0
+        }
+
+        .rating > label:hover:before,
+        .rating > label:hover ~ label:before {
+            opacity: 1 !important
+        }
+
+    .rating > input:checked ~ label:before {
+        opacity: 1
+    }
+
+    .rating:hover > input:checked ~ label:before {
+        opacity: 0.5    
+    }
