--- a/VisitACity/Web/VisitACity.Web/Views/Plans/UserUpcomingPlans.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Plans/UserUpcomingPlans.cshtml
@@ -4,29 +4,31 @@
 }
 @if (Model.Plans.Count() == 0)
 {
-    <partial name="_NoPlans"/>;
+    <partial name="_NoPlans" />
+    ;
 }
- <div class="container">
-  <div class="row">
-    <div class="col-12">
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">City</th>
-            <th scope="col">Country</th>
-            <th scope="col">From</th>
-            <th scope="col">To</th>
-            <th scope="col">Days</th>
-            <th scope="col">Actions</th>
-          </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model.Plans)
-            {
-                <partial name="_PlanPartial", model="item"/>;
-            }   
-        </tbody>
-      </table>
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">City</th>
+                        <th scope="col">Country</th>
+                        <th scope="col">From</th>
+                        <th scope="col">To</th>
+                        <th scope="col">Days</th>
+                        <th scope="col">Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model.Plans)
+                    {
+                        <partial name="_PlanPartial" , model="item" />
+                        ;
+                    }
+                </tbody>
+            </table>
+        </div>
     </div>
-  </div>
 </div>
