--- a/VisitACity/Web/VisitACity.Web/wwwroot/css/rating.css
+++ b/VisitACity/Web/VisitACity.Web/wwwroot/css/rating.css
@@ -36,3 +36,16 @@
     .rating:hover > input:checked ~ label:before {
         opacity: 0.5    
     }
+
+.product-rating {
+    font-size: 20px;
+}
+
+.stars i {
+    font-size: 18px;
+    color: orange;
+}
+
+.rating-text {
+    margin-top: 10px;
+}
