--- a/VisitACity/Web/VisitACity.Web/Views/Attractions/_AttractionCard.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Attractions/_AttractionCard.cshtml
@@ -1,33 +1,53 @@
 ﻿@using VisitACity.Web.ViewModels.Attractions
 @model AttractionViewModel
-@{  
-    var imagePath= $"~/images/Attractions/{Model.Images.FirstOrDefault().Id}.{Model.Images.FirstOrDefault().Extension}";
+@{
+    var imagePath = $"~/images/Attractions/{Model.Images.FirstOrDefault().Id}.{Model.Images.FirstOrDefault().Extension}";
 }
- <div class="media col-md-4">
-   
-    <a asp-controller="Attractions" asp-action="Details" asp-route-id="@Model.Id"> 
+<div class="media col-md-4">
+
+    <a asp-controller="Attractions" asp-action="Details" asp-route-id="@Model.Id">
         <img class="card-img-top" src="@Model.ImageUrl" alt="Card image cap" />
     </a>
     <div class="card-body">
-      <h4 class="card-title text-center">@Model.Name</h4>
-      <p></p>
-      <h5 class="card-text text-center">City: @Model.CityName</h5>
-      <div class="card-text">Price: $@Model.Price</div>
-      <div class="card-text">Address: @Model.Address</div>
-      <p></p>
+        <h4 class="card-title text-center">@Model.Name</h4>
+        <p></p>
+        <h5 class="card-text text-center">City: @Model.CityName</h5>
+        <div class="card-text">Price: $@Model.Price</div>
+        <div class="card-text">Address: @Model.Address</div>
+        <p></p>
+
     </div>
-         <a class="btn btn-info" asp-controller="Attractions" asp-action="Details" asp-route-id="@Model.Id">         
-             <div class="feature-icon">
-              <i class="fa fa-info-circle"></i> <span>Details</span>
-            </div>
-         </a>
-         <a class="btn btn-success" asp-controller="Plans" asp-action="AddAttractionToPlan">
-                      <div class="feature-icon">
-              <i class="fa fa-bus"></i> <span>Add to plan</span>
-            </div>
-         </a>   
     <div class="card-footer">
-        <small class="text-muted bottom-0">Rating: @Model.Rating.ToString("f1")</small>
+        <div class="d-flex justify-content-center">
+            <div style="margin: 0;
+     padding: 0;
+     font-family: 'Open Sans', serif;
+     " class="content text-center">
+
+                <div class="ratings">
+
+                    <span class="product-rating">@Model.Rating.ToString("f1")</span><span>/5</span>
+                    <div class="stars">
+                        @for (int i = 0; i < Model.Rating; i++)
+                        {
+                            <i class="fa fa-star"></i>
+                        }
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="text-center">
+        <a class="btn btn-info" asp-controller="Attractions" asp-action="Details" asp-route-id="@Model.Id">
+            <div class="feature-icon">
+                <i class="fa fa-info-circle"></i> <span>Details</span>
+            </div>
+        </a>
+        <a class="btn btn-success" asp-controller="Plans" asp-action="AddAttractionToPlan">
+            <div class="feature-icon">
+                <i class="fa fa-bus"></i> <span>Add to plan</span>
+            </div>
+        </a>
     </div>
     <p></p>
-  </div>
+</div>
