--- a/VisitACity/Web/VisitACity.Web/Views/Reviews/_PartialReview.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Reviews/_PartialReview.cshtml
@@ -2,18 +2,17 @@
 @model ReviewAttractionViewModel
 
 <div class="media; media-body" style="width: 100%; border: 1px, solid black">
-  <h5 class="mt-0">@Model.CreatedOn.ToShortDateString() by @Model.UserUserName</h5>
-    <div class="media-body">@Model.Content</div>      
-             @for (int i = 0; i < @Model.Rating; i++)
-        {
+    <h5 class="mt-0">@Model.CreatedOn.ToShortDateString() by @Model.UserUserName</h5>
+    <div class="media-body">@Model.Content</div>
+    <div class="ratings">
+        <div class="stars">
+            @for (int i = 0; i < Model.Rating; i++)
+            {
+                <i class="fa fa-star"></i>
+            }
 
-              <i class="fa fa-star"></i>
- 
-        }
-         @*      @for (int i = @Model.Rating; i <5 ; i++)
-        {
-     
-              <i class="fa-light fa-star"></i>
+        </div>
 
-        }*@
+    </div>
+
 </div>
