--- a/VisitACity/Web/VisitACity.Web/Views/Shared/_PagingPartial.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Shared/_PagingPartial.cshtml
@@ -2,7 +2,9 @@
 @model AttractionsListViewModel
 <nav aria-label="...">
     <ul class="pagination justify-content-center">
-        <li class="page-item @if (!Model.HasPreviousPage) { <text>disabled</text> }">
+        <li class="page-item @if (!Model.HasPreviousPage) {
+        <text>disabled</text>
+ }">
             <a class="page-link" asp-action="Index" asp-route-id="@Model.PreviousPageNumber">Previous</a>
         </li>
         @for (int i = Model.PageNumber - 4; i < Model.PageNumber; i++)
@@ -25,7 +27,9 @@
                 <li class="page-item"><a class="page-link" asp-action="Index" asp-route-id="@i">@i</a></li>
             }
         }
-        <li class="page-item @if (!Model.HasNextPage) { <text>disabled</text> }">
+        <li class="page-item @if (!Model.HasNextPage) {
+        <text>disabled</text>
+ }">
             <a class="page-link" asp-action="Index" asp-route-id="@Model.NextPageNumber">Next</a>
         </li>
     </ul>
