--- a/VisitACity/Web/VisitACity.Web/Views/Shared/_LoginPartial.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,6 @@
-﻿@using VisitACity.Common
+﻿@using Microsoft.AspNetCore.Identity
+@using VisitACity.Common
 @using VisitACity.Data.Models
-@using Microsoft.AspNetCore.Identity
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
