add movie functionality

--- a/WatchList/Watchlist/Views/Movies/Add.cshtml
+++ b/WatchList/Watchlist/Views/Movies/Add.cshtml
@@ -1,4 +1,5 @@
-﻿@*@{
+﻿@model AddMovieModel;
+@{
     ViewBag.Title = "Add Movie";
 }
 
@@ -48,4 +49,4 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-}*@
+}
