--- a/WatchList/Watchlist/Views/Movies/Watched.cshtml
+++ b/WatchList/Watchlist/Views/Movies/Watched.cshtml
@@ -1,6 +1,6 @@
-﻿@*@using Watchlist.Models.Movies
+﻿@using Watchlist.Models.Movies
 @using Microsoft.AspNetCore.Identity;
-@model AllMoviesQueryModel
+@model AllMoviesModel
 
 @{
     ViewBag.Title = "Watched Movies";
@@ -29,4 +29,4 @@
             </form>
         </div>
     }
-</div>*@
+</div>
