--- a/VisitACity/Web/VisitACity.Web/Views/Shared/_LoginPartial.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Shared/_LoginPartial.cshtml
@@ -12,9 +12,7 @@
         </li>
         if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
         {
-            <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="Administration" asp-controller="Dashboard" asp-action="Index" title="Admin">Admin</a>
-            </li>
+           <partial name="_AdminPartial"/>
         }
         <li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@this.Url.Action("Index", "Home", new { area = string.Empty })">
