--- a/VisitACity/Web/VisitACity.Web/Views/_ViewImports.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using VisitACity.Web
 @using VisitACity.Web.ViewModels
+@using VisitACity.Common
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, VisitACity.Web
