--- a/VisitACity/Web/VisitACity.Web/Views/Plans/Create.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Plans/Create.cshtml
@@ -1,8 +1,7 @@
 ﻿@model VisitACity.Web.ViewModels.Plans.CreatePlanInputModel
 @{
     this.ViewData["Title"] = "Add new plan";
-    var citiItems = this.Model.CitiesItems.Select(x => new SelectListItem(x.Value, x.Key));
-    var countryItems = this.Model.CountriesItems.Select(x => new SelectListItem(x.Value, x.Key));
+
 }
 
 <form method="post" class="col-md-6 offset-md-3"
@@ -10,16 +9,25 @@
     <h2>Where are you travelling to?</h2>
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
-        <label asp-for="CountryId"></label>
-        <select asp-for="CountryId" class="form-control" asp-items="countryItems"></select>
-        @* <input asp-for="Country" class="form-control" placeholder="Country" value="Bulgaria"/>*@
-        <span asp-validation-for="CountryId" class="text-danger"></span>
+       <label asp-for="CountryId" class="form-label">Country</label>
+                <select asp-for="CountryId" class="form-control">
+                    @foreach (var country in Model.Countries)
+                    {
+                        <option value="@country.Id">@country.Name</option>
+                    }
+                </select>
+                <span asp-validation-for="CountryId" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="CityId"></label>
-        <select asp-for="CityId" class="form-control" asp-items="citiItems"></select>
-        @*<input asp-for="City" class="form-control" placeholder="City"/>*@
-        <span asp-validation-for="CityId" class="text-danger"></span>
+        <label asp-for="CityId" class="form-label">Category</label>
+                <select asp-for="CityId" class="form-control">
+                    @foreach (var city in Model.Cities)
+                    {
+                        <option value="@city.Id">@city.Name</option>
+                    }
+                </select>
+                <span asp-validation-for="CityId" class="text-danger"></span>
+
     </div>
     <div class="form-group">
         <label asp-for="FromDate"></label>
