create admin items

--- a/VisitACity/Web/VisitACity.Web/Areas/Administration/Views/Attractions/Create.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Areas/Administration/Views/Attractions/Create.cshtml
@@ -1,3 +1,9 @@
 ﻿@model VisitACity.Web.ViewModels.Administration.Attractions.CreateAttractionInputModel
-
+@{
+    this.ViewData["Title"] = "Create attraction";
+}
+@if (this.TempData.ContainsKey("Message"))
+{
+    <div class="alert alert-success">@this.TempData["Message"]</div>
+}
 <h1> Create attraction</h1>
