--- a/VisitACity/Web/VisitACity.Web/Views/Shared/_AdminPartial.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Views/Shared/_AdminPartial.cshtml
@@ -6,10 +6,10 @@
   </a>
 
   <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-    <li><a class="dropdown-item" asp-area="Administration" asp-controller="Attractions" asp-action="Create">Create attraction</a></li>
-   @* <li><a class="dropdown-item" asp-area="Administration" asp-controller="Restarants" asp-action="Create">Create attraction</a></li>
-    <li><a class="dropdown-item" asp-area="Administration" asp-controller="Cities" asp-action="Create">Create city</a></li>
-    <li><a class="dropdown-item" asp-area="Administration" asp-controller="Countries" asp-action="Create">Create country</a></li>*@
+    <li><a class="dropdown-item" asp-area="Administration" asp-controller="Attractions" asp-action="Create">Create Attraction</a></li>
+    <li><a class="dropdown-item" asp-area="Administration" asp-controller="Restaurants" asp-action="Create">Create Restaurant</a></li>
+    <li><a class="dropdown-item" asp-area="Administration" asp-controller="Cities" asp-action="Create">Create City</a></li>
+    <li><a class="dropdown-item" asp-area="Administration" asp-controller="Countries" asp-action="Create">Create Country</a></li>
   </ul>
 </div>
 }
