temp data comments after POST

--- a/VisitACity/Web/VisitACity.Web/Areas/Administration/Views/Attractions/Create.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Areas/Administration/Views/Attractions/Create.cshtml
@@ -2,8 +2,6 @@
 @{
     this.ViewData["Title"] = "Create attraction";
 }
-@if (this.TempData.ContainsKey("Message"))
-{
-    <div class="alert alert-success">@this.TempData["Message"]</div>
-}
+
 <h1> Create attraction</h1>
+<div asp-validation-summary="All" class="text-danger"></div>
