--- a/VisitACity/Web/VisitACity.Web/Areas/Administration/Views/Countries/Create.cshtml
+++ b/VisitACity/Web/VisitACity.Web/Areas/Administration/Views/Countries/Create.cshtml
@@ -2,8 +2,22 @@
 @{
     this.ViewData["Title"] = "Create country";
 }
-@if (this.TempData.ContainsKey("Message"))
-{
-    <div class="alert alert-success">@this.TempData["Message"]</div>
-}
-<h1> Create Country</h1>
+<h2 class="text-center">@ViewBag.Title</h2>
+<hr />
+
+<div asp-validation-summary="All" class="text-danger"></div>
+<div class="row">
+    <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
+        <form asp-action="Create" method="post">
+            <div class="mb-3">
+                <label asp-for="Name" class="form-label">Name</label>
+                <input asp-for="Name" class="form-control" aria-required="true" />
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="mb-3">
+                <input class="btn btn-primary" type="submit" value="Add" />
+            </div>
+        </form>
+    </div>
+</div>
+
